# yamsergey.termux.libfilewatcher

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.java
include/: filewatcher_jni.h
src/common/: jni_helpers.c
src/real/: real_filewatcher.c
src/stub/: stub_filewatcher.c
test/integration/: TestFileWatcher.java
